CRD funcionality in api
